# FqTools

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SECURITY.md  clang_tidy_report.txt  conan_toolchain.cmake  conanfile.py  test.cppm  类结构体注释补全任务报告.md
.claude/: settings.local.json
.clinerules/: documentation-preferences.md
.codebuddy/: analysis-summary.json
.codebuddy/.rules/: dev-cpp.mdc
.devcontainer/: devcontainer.json  devcontainer.simple.json
.gemini/: GEMINI.md
.github/: CODEOWNERS
.github/workflows/: ci-cd.yml  ci.yml
changelog/: 2025-10-20-docs-cleanup.md  2025-10-20-docs-restructure.md  2025-10-20-oss-readiness-phase2.md  2025-10-20-prune-scripts.md  2025-10-20-repo-audit-initial-fixes.md  2025-10-20-scripts-consolidation.md  2025-10-20-structure-cleanup.md  2025-10-21-arch-phase1-refactor.md  2025-10-21-arch-phase2-pipeline.md  2025-10-21-arch-phase2-public-api-headers.md  2025-10-21-architecture-diagram.md  2025-10-21-ci-deps-docs-sync.md  2025-10-21-docs-restructure-phase3.md  2025-10-21-rename-overhaul-batch1.md  2025-10-21-rename-overhaul-batch2-4.md
cmake/: FastQToolsConfig.cmake.in
cmake/modules/: common.cmake  fq_common.cmake  fq_config.cmake  fq_error.cmake
config/: README.md
config/dependencies/: conandata.yml  conanfile.py  vcpkg.json
config/deployment/: Dockerfile
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: ANNOTATION_PROGRESS_TRACKER.csv  ANNOTATION_TASK_LIST.md  README.md  TASK_SUMMARY.md  dev_architecture.md  dev_building.md  dev_contributing.md  user_quick_start.md
docs/design/: architecture.md
docs/dev/: architecture.md  build.md  build_system.md  building.md  coding_standards.md  integration_test_framework.md  performance_benchmark_system.md  tbb_pipeline.md
docs/developer_guide/: commenting_standards.md
docs/development/: api_design_standards.md  build.md  coding_standards.md  cpp20_modules_migration_plan.md  git_commit_guidelines.md  unified_exception_handling_strategy.md
docs/internal/: BUILD_SYSTEM_MODERNIZATION_REPORT.md  CHANGELOG_TECHNICAL_DEBT.md  FastQTools_Feature_Expansion_Analysis.md  annotation_tasks.md  changelog_code_style.md
docs/user/: installation.md  quick_start.md  usage.md
examples/: tbb_pipeline_demo.cpp
scripts/: build-clang-simple.sh  build-clang.sh  build-gcc.sh  build.sh  coverage.sh  dev-container-setup.sh  dev.sh  format.sh  gcov-wrapper.sh  install_dependencies.sh  lint.sh  normalize_comments.py  optimize_structure.py  package.sh  sanitize.sh  test.sh  update_includes.py  verify_refactor.py
src/: CMakeLists.txt
src/Core/: Core.cpp  Core.h  std.h
src/Processing/: IReadProcessor.cpp  IReadProcessor.h  ProcessingPipeline.cpp  ProcessingPipeline.h  TbbProcessingPipeline.cpp  TbbProcessingPipeline.h
src/Processing/Mutators/: QualityTrimmer.cpp  QualityTrimmer.h
src/Processing/Predicates/: MinQualityPredicate.cpp  MinQualityPredicate.h
src/cli/: CMakeLists.txt  main.cpp
src/cli/commands/: FilterCommand.cpp  FilterCommand.h  ICommand.h  StatCommand.cpp  StatCommand.h  filter_command.cpp  filter_command.h  stat_command.cpp  stat_command.h
src/common/: CMakeLists.txt  Conveyor.h  conveyor.h
src/core_legacy/: core.cpp  core.h
src/interfaces/: Factory.cpp  IProcessingPipeline.h  IStatisticCalculator.h  factory.cpp  i_processing_pipeline.h  i_statistic_calculator.h
src/memory/: BatchMemoryManager.cpp  BatchMemoryManager.h  batch_memory_manager.cpp  batch_memory_manager.h
src/modules/: CMakeLists.txt
src/modules/common/: CMakeLists.txt  common.cpp  common.h
src/modules/config/: CMakeLists.txt  config.cpp  config.h
src/modules/core/: CMakeLists.txt  core.cppm  core.h
src/modules/error/: CMakeLists.txt  error.cpp  error.h  error_codes.cpp  error_codes.h  error_context.cpp  error_context.h  error_logger.cpp  error_logger.h  error_recovery.cpp  error_recovery.h  exception_hierarchy.cpp  exception_hierarchy.h  exception_macros.h
src/modules/fastq/: CMakeLists.txt  fastq.cppm  fastq.h
src/modules/io/: CMakeLists.txt  io.cppm  io.h
src/modules/pipeline/: CMakeLists.txt  factory.cpp
src/modules/pipeline/processing/: i_read_processor.h  processing_pipeline.cpp  processing_pipeline.h  tbb_processing_pipeline.cpp  tbb_processing_pipeline.h
src/modules/pipeline/processing/predicates/: min_quality_predicate.cpp
src/modules/pipeline/statistics/: fq_statistic.cpp  fq_statistic.h  fq_statistic_worker.cpp  fq_statistic_worker.h
src/pipeline/: CMakeLists.txt  factory.cpp
src/pipeline/processing/: processing_pipeline.cpp  tbb_processing_pipeline.cpp  tbb_processing_pipeline.h
src/pipeline/processing/mutators/: quality_trimmer.cpp  quality_trimmer.h
src/pipeline/statistics/: fq_statistic.h
src/processing/: i_read_processor.cpp  i_read_processor.h  processing_pipeline.cpp  processing_pipeline.h  tbb_processing_pipeline.cpp  tbb_processing_pipeline.h
src/processing/mutators/: quality_trimmer.cpp  quality_trimmer.h
src/processing/predicates/: min_quality_predicate.cpp  min_quality_predicate.h
src/statistics/: fq_statistic.cpp  fq_statistic.h  fq_statistic_worker.cpp  fq_statistic_worker.h  i_statistic.h
src/stats/: FqStatistic.cpp  FqStatistic.h  FqStatisticWorker.cpp  FqStatisticWorker.h  IStatistic.h
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/common/: test_timer.cpp
tests/unit/modules/: CMakeLists.txt
tests/unit/modules/common/: test_common.cpp
tests/unit/modules/config/: test_config_parsing.cpp  test_configuration.cpp
tests/unit/modules/error/: test_error_handler.cpp  test_error_handling.cpp  test_exceptions.cpp
tests/unit/modules/fastq/: CMakeLists.txt  test_fastq_files.cpp  test_fastq_records.cpp  test_fastq_validation.cpp
tests/unit/modules/pipeline/: test_pipeline_smoke.cpp
tests/utils/: CMakeLists.txt  fixture_loader.cpp  fixture_loader.h  test_helpers.cpp  test_helpers.h
tools/: README.md
tools/benchmark/: CMakeLists.txt  fastq_io_benchmark.cpp  performance_benchmark.cpp
(+16 files in other folders)
